# CDNA-CoDET-M4

./: .gitignore  COLAB_GPU_SETUP.md  COLAB_QUICK_START.md  CONFIGURATION_GUIDE.py  HPC_DEPLOYMENT.md  HPC_QUICK_REF.md  HPC_SETUP_SUMMARY.md  JOERN_FIX.md  OPTIMIZATION_GUIDE.py  README.md  README_DATASET_LOADING.md  analyze_dataset.py  analyze_labels.py  check_device.py  code_to_image_converter.py  colab_quickstart.py  cpg_generation.pbs  dataset_loading_strategies.py  device_manager.py  explore_json_split.py  load_dataset.py  load_dataset_configurable.py  load_dataset_optimized.py  pyproject.toml  python_sample.pbs  quickstart.py  requirements-cu121.txt  requirements-dev.txt  requirements.txt  root.py  run.py  run_experiments.py  setup.py  test_cuda.pbs  test_cuda.py  test_joern.py  unified_model_colab_run.ipynb
Exploration/: test.ipynb
exp/: exp_basic.py  exp_downstream.py  exp_pretrain.py
experiment-matrix/: draft-experiment-matrix-20260218-1647.md
extract_structural_features/: claude_code_prompt.md  code_hash.md  code_hash.py  description.md  extract_structural_features.md  extract_structural_features.py  generate_code_hash.py  llm_only_statistical_tests.csv  pairwise_tests.csv  preliminary_analysis.ipynb  preliminary_analysis.py  preliminary_findings.md  sample_2000_with_hash.py  structural_features_analysis (1).py  structural_features_analysis.ipynb
layers/: GraphEncoder.py  TextEncoder.py  __init__.py
models/: CodeBert.py  CodeCLIP.py  CodeCLIP_ablation_graph_only.py  CodeCLIP_ablation_no_cross.py  CodeCLIP_ablation_no_penalty.py  CodeCLIP_ablation_no_router.py  Unixcoder.py  __init__.py
notebooks/: CNN.ipynb  Check_Jsonl.ipynb  Experiment_1.ipynb  Explore_CPG_Dataset.ipynb  colab_setup.ipynb  colab_setup.py  exp_test.ipynb  test.ipynb
results/: metrics.csv
scripts/: downstream.sh  generate_cpgs.sh  generate_hetero.sh  generate_homo.sh  generate_joern.sh  generate_split.sh  pretrain.sh
tests/: inspect_dataset.py  test_converter.py  verify_dataset.py  verify_mapping.py
utils/: Joern.py  __init__.py  ast2pyg.py  cpg2hetero copy.py  cpg2hetero.py  cpg2homo.py  (+4 more)
(+51 files in other folders)
