[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "city-of-agents"
version = "0.1.0"
description = "Code Analysis and Graph Generation Framework for Software Metrics Visualization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "City of Agents Research Team"}
]
keywords = [
    "code-analysis",
    "graph-neural-networks",
    "software-metrics",
    "visualization",
    "ast",
    "pytorch-geometric"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.0",
    "datasets",
    "matplotlib",
    "seaborn",
    "networkx",
    "ogb>=1.3.6",
    "transformers==4.47.0",
    "torch>=2.0.0",
    "torch-geometric",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]
notebooks = [
    "ipykernel",
    "jupyter",
    "jupyterlab",
]
joern = [
    # Joern requires external installation - see README
]

[project.urls]
Homepage = "https://github.com/mohameddhameem/City-of-Agents"
Repository = "https://github.com/mohameddhameem/City-of-Agents"
Documentation = "https://github.com/mohameddhameem/City-of-Agents/blob/main/README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["city_of_agents*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
